tests/specs/ecosystem/ns/ha/0_1_0.test
ns/ha/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
   */ target?: HTMLElement;
               ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:10:16

error: Type checking failed.

